gobmkida/g0/get_command
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/get_command/src/interface/play_ascii.c:901:19: error: use of undeclared identifier 'aHelp_1'
if ( *commanda == aHelp_1[0] ) 
                  ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/get_command/src/obj/2/play_ascii.o] Error 1
